Bug 697978 - make display:none svg images load. r=dholbert,bzbarsky